[package]
name = "flutter-unit"
version = "0.1.0"
authors = ["淘小杰 <308512341@qq.com>"]
edition = "2018"

[workspace]

[dependencies]
env_logger = "0.7.1"
# flutter-engine = { git = "https://github.com/flutter-rs/flutter-rs" }
# flutter-winit = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-engine = { path = "../../flutter-engine" }
flutter-glfw = { path = "../../flutter-glfw" }
log = "0.4.8"
dirs = "2.0.2"
parking_lot = "0.11.0"
serde = "1.0.114"
sqlite = "0.25.3"
serde_json = "1.0.57"

[target.'cfg(target_os = "android")'.dependencies]
android_glue = { git = "https://github.com/rust-windowing/android-rs-glue" }
android_logger = "0.8.6"
android-ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }
jni-glue = "0.0.10"

[target.'cfg(target_os = "android")'.dependencies.jni-android-sys]
version = "0.0.10"
features = ["api-level-18", "android-content-Context", "android-content-pm-ApplicationInfo"]

[package.metadata.flutter]
engine_version = "99c2b3a245"
