[package]
name = "flutter-unit"
version = "0.1.0"
authors = ["淘小杰 <308512341@qq.com>"]
edition = "2018"

[workspace]

[dependencies]
env_logger = "0.7.1"
# flutter-engine = { git = "https://github.com/flutter-rs/flutter-rs" }
# flutter-winit = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-engine = { path = "../../flutter-engine" }
flutter-glfw = { path = "../../flutter-glfw" }

# flutter-winit = { path = "../../flutter-winit" }
# glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }

log = "0.4.8"
dirs = "2.0.2"
parking_lot = "0.11.0"
serde = "1.0.114"
sqlite = "0.25.3"
serde_json = "1.0.57"

[package.metadata.flutter]
engine_version = "fee6f9e533"
